<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/visitor_screen_background"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/visitor_screen_padding">

        <LinearLayout
            android:layout_width="@dimen/visitor_content_width"
            android:layout_height="wrap_content"
            android:background="@drawable/visitor_panel_background"
            android:orientation="vertical"
            android:padding="@dimen/visitor_panel_padding">

            <TextView
                style="@style/VisitorTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/visitor_information_title" />

            <TextView
                style="@style/VisitorSubtitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/visitor_spacing_md"
                android:gravity="center"
                android:text="@string/visitor_information_subtitle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/visitorInformationOptions"
            android:layout_width="@dimen/visitor_content_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/visitor_spacing_md"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="@dimen/visitor_content_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/visitor_spacing_md"
            android:background="@drawable/visitor_panel_background"
            android:orientation="vertical"
            android:padding="@dimen/visitor_panel_padding">

            <TextView
                android:id="@+id/visitorInformationDetail"
                style="@style/VisitorBodyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/visitor_content_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/visitor_spacing_md"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/visitorInformationTalk"
                style="@style/VisitorPrimaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visitor_information_talk" />

            <Button
                android:id="@+id/visitorInformationBack"
                style="@style/VisitorSecondaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/visitor_spacing_sm"
                android:text="@string/visitor_information_back" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
